--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .social-icon {
+        @apply fill-white aspect-square hover:fill-slate-400 w-8 transition-colors;
+    }
+}
+
+@layer utilities {
+    .main-height {
+        min-height: calc(100vh - 442.66px - 24px);
+    }
+}
